core/src/components/select/select.scss
@import "./select.vars";

// Select
// --------------------------------------------------

:host {
  /**
   * @prop --padding-top: Top padding of the select
   * @prop --padding-end: Right padding if direction is left-to-right, and left padding if direction is right-to-left of the select
   * @prop --padding-bottom: Bottom padding of the select
   * @prop --padding-start: Left padding if direction is left-to-right, and right padding if direction is right-to-left of the select
   *
   * @prop --placeholder-color: Color of the select placeholder text
   * @prop --placeholder-opacity: Opacity of the select placeholder text
   *
   * @prop --highlight-color-focused	The color of the highlight on the select when focused
   * @prop --highlight-color-invalid	The color of the highlight on the select when invalid
   * @prop --highlight-color-valid	The color of the highlight on the select when valid
   *
   * @prop --border-color	Color of the select border
   * @prop --border-radius	Radius of the select border
   * @prop --border-style	Style of the select border
   * @prop --border-width	Width of the select border
   *
   * @prop --ripple-color: The color of the ripple effect on MD mode.
   */
  --padding-top: 0px;
  --padding-end: 0px;
  --padding-bottom: 0px;
  --padding-start: 0px;
  --placeholder-color: currentColor;
  --placeholder-opacity: 0.6;

  display: block;
  position: relative;

  font-family: $font-family-base;

  overflow: hidden;
  z-index: $z-index-item-input;
}

:host(.legacy-select) {
  @include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));

  display: flex;

  align-items: center;
}

:host(:not(.legacy-select)) {
  min-height: 44px;
}

:host(.in-item) {
  position: static;

  max-width: 45%;
}

:host(.select-disabled) {
  opacity: .4;
  pointer-events: none;
}

:host(.ion-focused) button {
  border: 2px solid #5e9ed6;
}

.select-placeholder {
  color: var(--placeholder-color);

  opacity: var(--placeholder-opacity);
}

:host(.legacy-select) label {
  @include input-cover();

  display: flex;

  align-items: center;

  opacity: 0;
}

button {
  @include visually-hidden();
}

.select-icon {
  position: relative;
}

.select-text {
  flex: 1;

  min-width: 16px;

  font-size: inherit;

  text-overflow: ellipsis;

  white-space: nowrap;

  overflow: hidden;
}

.select-icon-inner {
  @include position(50%, null, null, 5px);
  @include margin(-2px, null, null, null);

  position: absolute;

  width: 0;
  height: 0;

  border-top: 5px solid;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;

  color: currentColor;

  pointer-events: none;
}

// Select Wrapper
// --------------------------------------------------

.select-wrapper {
  @include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));

  display: flex;

  position: relative;

  flex-grow: 1;

  align-items: center;

  height: 100%;

  /**
   * This allows developers to set the height
   * on the host of the element but still have
   * the label take up the full height
   * of the parent.
   */
  min-height: inherit;

  transition: background-color 15ms linear;

  cursor: inherit;
}

// Select Label
// ----------------------------------------------------------------

.label-text-wrapper {
  /**
   * This ensures that double tapping this text
   * clicks the <label> and focuses the input
   * when a screen reader is enabled.
   */
  pointer-events: none;

  text-overflow: ellipsis;

  white-space: nowrap;

  overflow: hidden;
}

/**
 * If no label text is placed into the slot
 * then the element should be hidden otherwise
 * there will be additional margins added.
 */
.label-text-wrapper-hidden {
  display: none;
}

// Select Native Wrapper
// ----------------------------------------------------------------

.native-wrapper {
  display: flex;
}

// Select Justify
// --------------------------------------------------

:host(.select-justify-space-between) .select-wrapper {
  justify-content: space-between;
}

:host(.select-justify-start) .select-wrapper {
  justify-content: start;
}

:host(.select-justify-end) .select-wrapper {
  justify-content: end;
}

// Select Label Placement - Start
// ----------------------------------------------------------------

/**
 * Label is on the left of the input in LTR and
 * on the right in RTL.
 */
:host(.select-label-placement-start) .select-wrapper {
  flex-direction: row;
}

:host(.select-label-placement-start) .label-text-wrapper {
  /**
   * The margin between the label and
   * the select should be on the end
   * when the label sits at the start.
   */
  @include margin(0, 8px, 0, 0);
}

// Select Label Placement - End
// ----------------------------------------------------------------

/**
 * Label is on the right of the select in LTR and
 * on the left in RTL.
 */
:host(.select-label-placement-end) .select-wrapper {
  flex-direction: row-reverse;
}

/**
 * The margin between the label and
 * the select should be on the start
 * when the label sits at the end.
 */
:host(.select-label-placement-end) .label-text-wrapper {
  @include margin(0, 0, 0, 8px);
}

// Select Label Placement - Fixed
// ----------------------------------------------------------------

:host(.select-label-placement-fixed) .label-text-wrapper {
  /**
   * The margin between the label and
   * the select should be on the end
   * when the label sits at the start.
   */
  @include margin(0, 8px, 0, 0);
}

/**
 * Label is on the left of the select in LTR and
 * on the right in RTL. Label also has a fixed width.
 */
:host(.select-label-placement-fixed) .label-text-wrapper {
  flex: 0 0 100px;

  width: 100px;
  min-width: 100px;
  max-width: 200px;
}

